# Daydream

./: .gitignore  README.md  pyproject.toml  qmd.yml
docs/: Reproducing Ambien Structural Resonance as a Hermes Skill.md  ambien_ai_about.md  ambien_ai_homepage.md  ambien_resonance_prd_tech_doc_cn .md  ambien_resonance_prd_tech_doc_cn v2.md  daydream_final_development_brief.md  daydream_v3_architecture_blueprint.md  gwern_ai_daydreaming.md
docs/resonance_samples/: README.md
docs/resonance_samples/near_miss/: 01_two_outages.md  02_automated_typewriter.md  03_docker_containers.md  04_compiler_deadlock_and_gridlock.md  05_git_branches_and_tree_branching.md  06_human_memory_and_l1_cache.md  07_email_spam_and_slack_spambots.md  08_static_pages_and_paper_printing.md  09_whack_a_mole_and_bug_fixing.md  10_printed_books_and_eink.md
docs/resonance_samples/negative/: 01_ovens_and_chips.md  02_solar_panels_and_cones.md  03_flywheel_and_clock_rate.md  04_bee_foraging_and_vector_clustering.md  (+6 more)
prompts/: adjudicator.md  compare_cards.md  constellation.md  critic.md  devil_advocate.md  draft_essay.md  extract_structure.md  mesh_draft.md
scripts/: daydream-cron.sh
skills/daydream/: SKILL.md
src/daydream/: artifacts.py  candidates.py  cli.py  corpus.py  dream.py  evaluation.py  fs.py  outputs.py  qmd.py  runs.py  schemas.py  scoring.py  workspace.py
tests/: test_candidate_pool.py  test_cli.py  test_constellation.py  test_core_behaviors.py  test_corpus_tools.py  test_evaluation_samples.py  test_outputs.py  test_seed_cards.py  test_v2_gates.py  test_v3_dream.py
(+35 files in other folders)
