[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "daydream"
version = "0.1.0"
description = "Portable corpus daydreaming skill with a thin semantic-search helper CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
daydream = "daydream.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
